fixed some spacing issues

--- a/wordpress/wp-content/themes/twentyseventeen/interactive/scss/coming-soon.scss
+++ b/wordpress/wp-content/themes/twentyseventeen/interactive/scss/coming-soon.scss
@@ -41,13 +41,16 @@ body {
                             @include breakpoint($mid-laptop) {
                                 margin-top:100px;
                                 max-width: 426px;
+                                padding: 20px 20px 20px 0;
                             }
                             
                             p {
-                                font-size:25px;
+                                font-size:22px;
                                 text-align:center;
                                 line-height:30px;
                                 color: $text-gray;
+                                font-weight:400;
+                                letter-spacing: 0.5px;
                             }
                         }
                         .coming-soon-product-image {
@@ -68,7 +71,7 @@ body {
         }
         .site-content-contain {
             @include breakpoint($large-tablet) {
-                margin-top:-100px;
+                margin-top:-130px;
                 background-color:transparent;
                 position:relative;
             }
